Fix: Spelling Error and Answer Text on IOS
-Fixed spelling error on Q7
-Fixed Color of answer text on IOS

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@
 .answer-button {
   background-color: goldenrod;
   margin-bottom: 1rem;
+  color: black;
 }
 
 .answer::after {
